--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,16 @@
 <resources>
 
-    <!-- Base application theme -->
+    <!-- Application theme -->
     <style name="AppTheme" parent="Theme.AppCompat">
         <item name="radioButtonStyle">@style/RadioButtonStyle</item>
         <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:progressBarStyle">@style/ProgressBarStyle</item>
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorButtonNormal">@color/colorAccent</item>
-
 
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:colorForeground">@color/colorForeground</item>
@@ -26,11 +26,15 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="RadioButtonStyle" parent="android:Widget.CompoundButton.RadioButton">
+    <style name="ProgressBarStyle" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:indeterminate">true</item>
+    </style>
+
+    <style name="RadioButtonStyle" parent="@style/Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:textColor">@color/colorForeground</item>
     </style>
 
-    <style name="ToolbarStyle" parent="android:Widget.Toolbar">
+    <style name="ToolbarStyle" parent="@style/Widget.AppCompat.Toolbar">
         <item name="android:background">@color/colorPrimaryDark</item>
     </style>
 
