--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"/>
+            android:layout_weight="1"/>
 
         <Button
             android:id="@+id/button_register"
